--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<link rel="icon" type="image/ico" href="./assets/favicon/favicon.ico">
 
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+		<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.css"> -->
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 		<script src="./js/jquery-2.1.0.js"></script>
-		<script src="./js/bootstrap.js"></script>
+		<!-- <script src="./js/bootstrap.js"></script> -->
 		<script src="./js/blocs.js"></script>
 		<script src="./js/jquery.touchSwipe.js" defer></script>
 		<script src="./js/gmaps.js"></script>
@@ -29,32 +29,31 @@
 	<body>
 		<!-- Principal conteneur -->
 		<main class="page-container">
-
 			<!-- bloc-0 -->
-			<header class="bloc bgc-white l-bloc " id="bloc-0">
-				<nav class="container bloc-sm navbar row">
+			<header class="bloc bgc-white l-bloc container" id="bloc-0">
+				<a class="header__picture" href="index.html">
+					<img src="./assets/logo/la-chouette-agence.png" alt="La chouette agence, web design à Lyon" height="50" />
+				</a>
+				
+				<div class="bloc-sm navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html">
-							<img src="./assets/logo/la-chouette-agence.png" alt="La chouette agence, web design à Lyon" height="50" />
-						</a>
-
-						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only icon-bar fas fa-bars fa-2x"></span>
+						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">ALLO
+							<span class="sr-only icon-bar fas fa-bars fa-2x">Text</span>
 						</button>
 					</div>
 
-					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+					<nav class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li><a href="index.html">Accueil</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="contact.html">Contact & Devis</a></li>
 						</ul>
-					</div>
-				</nav>
+					</nav>
+				</div>
 			</header>
 			<!-- bloc-0 END -->
 
 			<!-- bloc-6 -->
-			<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+			<section class="talking bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 				<article class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12">
@@ -73,7 +72,7 @@
 			<!-- bloc-6 END -->
 
 			<!-- bloc-7 -->
-			<section class="bloc bgc-white l-bloc" id="bloc-7">
+			<section class="formulaire bloc bgc-white l-bloc" id="bloc-7">
 				<article class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-6 formulaire">
