--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<link rel="icon" type="image/ico" href="./assets/favicon/favicon.ico">
 
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+		<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.css"> -->
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 		<script src="./js/jquery-2.1.0.js"></script>
-		<script src="./js/bootstrap.js"></script>
+		<!-- <script src="./js/bootstrap.js"></script> -->
 		<script src="./js/blocs.js"></script>
 		<script src="./js/jquery.touchSwipe.js" defer></script>
 		<script src="./js/gmaps.js"></script>
@@ -27,27 +27,25 @@
 		<!-- Principal conteneur -->
 		<main class="page-container">
 			<!-- bloc-0 -->
-			<header class="bloc bgc-white l-bloc " id="bloc-0">
-				<nav class="container bloc-sm navbar row">
+			<header class="bloc bgc-white l-bloc container" id="bloc-0">
+				<a class="header__picture" href="index.html">
+					<img src="./assets/logo/la-chouette-agence.png" alt="La chouette agence, web design à Lyon" height="50" />
+				</a>
+				
+				<div class="bloc-sm navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html">
-							<img src="./assets/logo/la-chouette-agence.png" alt="logo de La chouette agence, agence Web Design à Lyon, création logo et sites web" height="50" />
-						</a>
-						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only icon-bar fas fa-bars fa-2x"></span>
+						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">ALLO
+							<span class="sr-only icon-bar fas fa-bars fa-2x">Text</span>
 						</button>
 					</div>
-					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+
+					<nav class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
-							<li>
-								<a href="index.html">Accueil</a>
-							</li>
-							<li>
-								<a href="contact.html">Contact & Devis</a>
-							</li>
+							<li><a href="index.html">Accueil</a></li>
+							<li><a href="contact.html">Contact & Devis</a></li>
 						</ul>
-					</div>
-				</nav>
+					</nav>
+				</div>
 			</header>
 			<!-- bloc-0 END -->
 
