--- a/contact.html
+++ b/contact.html
@@ -7,20 +7,31 @@
 
 		<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.css"> -->
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="media-style.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+
+		<!-- fichiers non-minifiés
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 
 		<script src="./js/jquery-2.1.0.js"></script>
 		<script src="./js/bootstrap.js"></script>
 		<script src="./js/blocs.js"></script>
 		<script src="./js/jquery.touchSwipe.js" defer></script>
 		<script src="./js/gmaps.js"></script>
-		<script src="./js/jqBootstrapValidation.js"></script>
-		<script src="./js/formHandler.js"></script>
+		-->
+
+		<!-- fichiers minifiés
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap-min.css">
+		
+		<script src="./js/jquery-2.1.0-min.js"></script>
+		<script src="./js/bootstrap-min.js"></script>
+		<script src="./js/blocs-min.js"></script>
+		<script src="./js/jquery.touchSwipe-min.js" defer></script>
+		<script src="./js/gmaps-min.js"></script>
+		-->
 
 		<script src="https://kit.fontawesome.com/022660c1b2.js" crossorigin="anonymous"></script>
-
-		<title>La chouette agence, Lyon : Contact & Devis</title>
+	
+		<title>La chouette agence, web design à Lyon</title>
 		<meta name="description" content="La chouette agence, agence de Web Design à Lyon, vous accompagne tout au long de votre projet ! Conseils, créations...">
 
 		<!-- Analytics -->
@@ -80,7 +91,7 @@
 							<form action="./includes/form_1.php" method="post" id="form_1" novalidate success-msg="Votre message a bien été envoyé" fail-msg="Oups, il semblerait que notre serveur de mail ne répond pas. Désolé pour l'inconvénient.">
 								<!-- !!! demander à Jean-François si c'est ok !!! -->
 								<div class="form-group">
-									<label for="name">Nom</label>
+									<label for="name">Nom</label><br>
 									<input type="text" id="name" name="user_name" class="form-control" placeholder="Indiquez votre nom/prénom ou celui de votre entreprise" required>
 								</div>
 
