--- a/index.html
+++ b/index.html
@@ -7,14 +7,28 @@
 
 		<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.css"> -->
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="media-style.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+
+		<!-- fichiers non-minifiés
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 
 		<script src="./js/jquery-2.1.0.js"></script>
 		<script src="./js/bootstrap.js"></script>
 		<script src="./js/blocs.js"></script>
 		<script src="./js/jquery.touchSwipe.js" defer></script>
 		<script src="./js/gmaps.js"></script>
+		-->
+
+		<!-- fichiers minifiés
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap-min.css">
+		
+		<script src="./js/jquery-2.1.0-min.js"></script>
+		<script src="./js/bootstrap-min.js"></script>
+		<script src="./js/blocs-min.js"></script>
+		<script src="./js/jquery.touchSwipe-min.js" defer></script>
+		<script src="./js/gmaps-min.js"></script>
+		-->
+
 		<script src="https://kit.fontawesome.com/022660c1b2.js" crossorigin="anonymous"></script>
 	
 		<title>La chouette agence, web design à Lyon</title>
