--- a/index.html
+++ b/index.html
@@ -38,32 +38,27 @@
 		<!-- Analytics END -->
 	</head>
 
-	<body>
-		<!-- Principal conteneur -->
-		<main class="page-container">
-			<!-- bloc-0 AKA header -->
-			<header class="bloc bgc-white l-bloc container" id="bloc-0">
-				<a class="header__picture" href="index.html">
-					<img src="./assets/logo/la-chouette-agence.png" alt="La chouette agence, web design à Lyon" height="50" />
-				</a>
-				
-				<div class="bloc-sm navbar row">
-					<div class="navbar-header">
-						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">ALLO
-							<span class="sr-only icon-bar fas fa-bars fa-2x">Text</span>
-						</button>
-					</div>
-
-					<nav class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-						<ul class="site-navigation nav navbar-nav">
-							<li><a href="index.html">Accueil</a></li>
-							<li><a href="contact.html">Contact & Devis</a></li>
-						</ul>
-					</nav>
+	<body class="bgc-atomic-tangerine">
+		<header class="header bgc-white" id="top-page">
+			<div class="header__navigation container">
+				<div class="header__wrap">
+					<a class="header__picture" href="index.html">
+						<img src="./assets/logo/la-chouette-agence.png" alt="La chouette agence, web design à Lyon" height="40" />
+					</a>
+	
+					<span class="fa fa-bars menu__icon"></span>
 				</div>
-			</header>
-			<!-- bloc-0 END -->
+				
+				<nav class="header__nav">
+					<ul class="header__navbar">
+						<li><a href="index.html">Accueil</a></li>
+						<li><a href="contact.html">Contact & Devis</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
 
+		<main class="main page-container">
 			<!-- bloc-1-presentation -->
 			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 				<article class="container bloc-lg">
@@ -83,8 +78,8 @@
 			<!-- bloc-1-presentation END -->
 
 			<!-- bloc-2-services -->
-			<section class="container bloc bgc-white l-bloc" id="bloc-2-services">
-				<div class="services bloc-md">
+			<section class="bloc bgc-white l-bloc" id="bloc-2-services">
+				<div class="container services bloc-md">
 					<article class="row">
 						<div class="col-sm-12 text-center">
 							<p class="services-plot">La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
@@ -230,53 +225,51 @@
 			</section>
 			<!-- bloc-5-cta END -->
 
-						<!-- ScrollToTop Button -->
-						<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
-						<!-- ScrollToTop Button END-->
 
-			<!-- Footer - bloc-8 -->
-			<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-				<div class="bloc-sm">
-					<div class="row">
-						<div class="col-sm-12">
-							<address>
-								<p class="text-center white">
-									La chouette agence<br>
-									Agence web basée à Lyon<br>
-									2 place Sathonay, 69001 Lyon<br>
-									Ouverte de 9h à 18h, du lundi au vendredi
-								</p>
-							</address>
+		</main>
 
-							<div class="row row-no-gutters social">
-								<div class="col-sm-3">
-									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
-									</div>
+		<!-- ScrollToTop Button -->
+		<a href="#top-page" class="bloc-button btn btn-d scrollToTop"><span class="fa fa-chevron-up"></span></a>
+		<!-- ScrollToTop Button END-->
+
+		<footer class="footer bloc bgc-atomic-tangerine d-bloc " id="bloc-8">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12">
+						<address>
+							<p class="text-center white">
+								La chouette agence<br>
+								Agence web basée à Lyon<br>
+								2 place Sathonay, 69001 Lyon<br>
+								Ouverte de 9h à 18h, du lundi au vendredi
+							</p>
+						</address>
+
+						<div class="row row-no-gutters social">
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
-								<div class="col-sm-3">
-									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
-									</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
-								<div class="col-sm-3">
-									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
-									</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
-								<div class="col-sm-3">
-									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
-									</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</footer>
-			<!-- Footer - bloc-8 END -->
-
-		</main>
-		<!-- Principal conteneur END -->
+			</div>
+		</footer>
 	</body>
 </html>
