--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 				</div>
 
 				<nav class="header__nav">
-					<a href="index.html">Accueil</a>
-					<a href="contact.html">Contact & Devis</a>
+					<a href="index.html" aria-label="Accueil">Accueil</a>
+					<a href="contact.html" aria-label="Contact">Contact & Devis</a>
 				</nav>
 			</div>
 		</header>
@@ -162,7 +162,7 @@
 								développer et à connaître le succès. Nous travaillons pour aider les
 								entreprises locales à attirer de nouveaux clients.
 							</p>
-							<p class="text-center white">
+							<p class="text-center">
 								Nous aimons collaborer avec des entrepreneurs créatifs et des
 								entreprises locales, qu’elles aient besoin de créer un site de A à Z
 								ou de donner un coup de jeune à leur site. Que vous ayez besoin
@@ -306,8 +306,8 @@
 		</main>
 
 		<!-- ScrollToTop Button -->
-		<a href="#top-page" class="bloc-button btn btn-d scrollToTop"
-			><span class="fa fa-chevron-up"></span
+		<a href="#top-page" class="bloc-button btn btn-d scrollToTop" aria-label="back to up">
+			<span class="fa fa-chevron-up"></span
 		></a>
 		<!-- ScrollToTop Button END-->
 
@@ -327,29 +327,29 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"
-										><span class="fa fa-twitter icon-md"></span
+									<a class="social" href="index.html" aria-label="twitter">
+										<span class="fa fa-twitter icon-md"></span
 									></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"
-										><span class="fa fa-facebook icon-md"></span
+									<a class="social" href="index.html" aria-label="facebook">
+										<span class="fa fa-facebook icon-md"></span
 									></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"
-										><span class="fa fa-dribbble icon-md"></span
+									<a class="social" href="index.html" aria-label="dribble">
+										<span class="fa fa-dribbble icon-md"></span
 									></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"
-										><span class="fa fa-instagram icon-md"></span
+									<a class="social" href="index.html" aria-label="instagram">
+										<span class="fa fa-instagram icon-md"></span
 									></a>
 								</div>
 							</div>
